inventory list sorting on-work